Established a shared products and variants mechanism for cleaner model.